--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ pytest==6.1.2
 flask-sqlalchemy==2.4.4
 pymysql==1.0.2
 flask-marshmallow==0.14.0
-PyJWT==2.0.1
+flask-JWT-extended==4.0.2
+flask-restful==0.3.8
